fix search with \ bug, .audio-modal bigger, text-truncate

--- a/client/src/css/Modal.css
+++ b/client/src/css/Modal.css
@@ -38,6 +38,10 @@ img {
     width: 80%;
 }
 
+.audio-modal {
+  width: 100%;
+}
+
 /* The Close Button */
 .close {
     color: #aaa;
